--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,14 @@
 Leiningen.gitignore
+/target
+/lib
+/classes
+/checkouts
+pom.xml
+*.jar
+*.class
+/.lein-*
+profiles.clj
+/.env
+.nrepl-port
+.vagrant
+*.log
